# containers-vmangos

./: ARCHITECTURE.md  MODULE.bazel  README.md  WORKSPACE
bazel/: common.bzl  docker.bzl  registries.bzl  status.bash
containers/: BUILD.bazel  README.md  variants.bzl
containers/builddeps/: BUILD.bazel  packages.lock.json  packages.yaml
containers/builder/: BUILD.bazel
containers/builder/rootfs/always-initdb.d/: update-db.sh
containers/builder/rootfs/docker-entrypoint-initdb.d/: create-db.sh
containers/builder/rootfs/opt/mangos/db/sql/: user_accounts.sql
containers/builder/rootfs/opt/run/: build.sh  database.sh
containers/database/: BUILD.bazel
containers/extractor/: BUILD.bazel
containers/release/: BUILD.bazel
containers/runtime/: BUILD.bazel  packages.lock.json  packages.yaml
docs/: tagline.txt  title.txt
tests/5464/: docker-compose.yaml
